--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 #logging.level.org.apache.coyote.http11=debug
-spring.messages.basename = config/messages/messages,config/errors/errors
-spring.messages.encoding = utf-8
+spring.messages.basename              = config/messages/messages,config/errors/errors
+spring.messages.encoding              = utf-8
+
+server.servlet.session.tracking-modes = cookie
